structure / scripts for manufactorum

--- a/Manufactorum/src/index.html
+++ b/Manufactorum/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="phaser.js"></script>
-    <script src="manufactorium.js"></script>
+    <script src="game.js"></script>
 	<style type="text/css">
 		#game-canvas {
 			background: lightgray;
@@ -14,6 +13,5 @@
     <title>Manufactorium</title>
 </head>
 <body>
-	<canvas width="500" height="500" id="game-canvas"></canvas>
 </body>
 </html>
